# eufy-x8

./: .gitignore  CHANGELOG.md  HANDOFF.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/workflows/: hacs_validation.yaml  hassfest.yaml  release.yaml  tests.yaml
custom_components/eufy_x8/: __init__.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  manifest.json  select.py  sensor.py  services.yaml  strings.json  switch.py  vacuum.py
custom_components/eufy_x8/api/: auth.py  cloud.py  discovery.py  local.py
custom_components/eufy_x8/translations/: en.json
tests/: conftest.py  test_const.py  test_coordinator.py  test_local.py  test_sensor.py  test_vacuum.py
tools/: CLAUDE.md  README.md  dump_path_data.py  get_local_keys.py  intercept_goto.py  test_locate_cancel.py  tuya_local_control.py  watch_goto.py
